# Agentic-Context-Engineering

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
agents/ace_agent/: agent.py
agents/ace_agent/schemas/: delta.py  playbook.py
agents/ace_agent/sub_agents/: curator.py  generator.py  reflector.py
